<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/home" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_serial"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/serial_tracking" />
        <item
            android:id="@+id/nav_socket"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/socket" />
        <item
            android:id="@+id/nav_firebase"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/firebase" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </group>
        </menu>
    </item>
    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>
